--- a/cadastro.css
+++ b/cadastro.css
@@ -5,10 +5,10 @@
 }
 
 .container {
-    background-color: white;
+    background-color: cyan;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 200px 900px 90px;
+    grid-template-rows: 200px 1000px 90px;
     grid-template-areas:
     "c m"
     "c p"
@@ -17,11 +17,12 @@
 
 header {
     grid-area: c;
+    background-color: cyan;
 }
 
 header > img {
     width: 100%;
-    height: 120%;
+    height: 1288px;
 }
 
 nav {
@@ -36,6 +37,7 @@ nav > div > form > input {
 }
 
 main {
+    background-color: cyan;
     grid-area: p;
     display: flex;
     justify-content: center;
@@ -65,6 +67,7 @@ main > form > input[type="password"] {
 }
 
 .linha {
+    background-color: cyan;
     display: flex;
     column-gap: 15px;
 }
@@ -77,14 +80,24 @@ main > form > label.termos {
     font-size: 20;
 }
 
-main > form > div > .termos
+main > form > input[type="Submit"] {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 30px;
+    background-color: black;
+    color: white;
+}
 
 footer {
     grid-area: f;
+    background-color: cyan;
 }
 
 footer > a {
     display: flex;
+    font-size: 25px;
     justify-content: center;
     align-items: center;
 }
